--- a/CustomDataset_PCA.ipynb
+++ b/CustomDataset_PCA.ipynb
@@ -1,27 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Dataset_PCA.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,20 +10,15 @@
         "id": "KsyAbqeYxmxh",
         "outputId": "7b3adedd-2978-4ffd-e21f-68aa529dd227"
       },
-      "execution_count": 77,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 2,
       "metadata": {
         "id": "2sr9D0dibMdz"
       },
@@ -61,17 +37,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "file_dir = \"./mnist_test.csv\"\n",
-        "df = pd.read_csv(file_dir)\n",
-        "print(\"the shape of test data is :\", df.shape)\n",
-        "\n",
-        "data_size = df.shape[0]\n",
-        "img_size = df.shape[1]-1\n",
-        "img_edge = int(math.sqrt(img_size))\n",
-        "\n",
-        "df.head()"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -80,40 +46,18 @@
         "id": "1RyjnY7DcMQU",
         "outputId": "a19e8265-c0eb-4aef-bdfd-39cca5bd31d8"
       },
-      "execution_count": 79,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "the shape of test data is : (10000, 785)\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   label  1x1  1x2  1x3  1x4  1x5  1x6  1x7  1x8  1x9  ...  28x19  28x20  \\\n",
-              "0      7    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
-              "1      2    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
-              "2      1    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
-              "3      0    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
-              "4      4    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
-              "\n",
-              "   28x21  28x22  28x23  28x24  28x25  28x26  28x27  28x28  \n",
-              "0      0      0      0      0      0      0      0      0  \n",
-              "1      0      0      0      0      0      0      0      0  \n",
-              "2      0      0      0      0      0      0      0      0  \n",
-              "3      0      0      0      0      0      0      0      0  \n",
-              "4      0      0      0      0      0      0      0      0  \n",
-              "\n",
-              "[5 rows x 785 columns]"
-            ],
             "text/html": [
-              "\n",
-              "  <div id=\"df-1cfb3ebf-4ca3-4950-a0d5-db7ed53013e7\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
+              "<div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -278,92 +222,50 @@
               "  </tbody>\n",
               "</table>\n",
               "<p>5 rows × 785 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1cfb3ebf-4ca3-4950-a0d5-db7ed53013e7')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   label  1x1  1x2  1x3  1x4  1x5  1x6  1x7  1x8  1x9  ...  28x19  28x20  \\\n",
+              "0      7    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
+              "1      2    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
+              "2      1    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
+              "3      0    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
+              "4      4    0    0    0    0    0    0    0    0    0  ...      0      0   \n",
               "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
+              "   28x21  28x22  28x23  28x24  28x25  28x26  28x27  28x28  \n",
+              "0      0      0      0      0      0      0      0      0  \n",
+              "1      0      0      0      0      0      0      0      0  \n",
+              "2      0      0      0      0      0      0      0      0  \n",
+              "3      0      0      0      0      0      0      0      0  \n",
+              "4      0      0      0      0      0      0      0      0  \n",
               "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-1cfb3ebf-4ca3-4950-a0d5-db7ed53013e7 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1cfb3ebf-4ca3-4950-a0d5-db7ed53013e7');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "[5 rows x 785 columns]"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 79
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "file_dir = \"./mnist_test.csv\"\n",
+        "df = pd.read_csv(file_dir)\n",
+        "print(\"the shape of test data is :\", df.shape)\n",
+        "\n",
+        "data_size = df.shape[0]\n",
+        "img_size = df.shape[1]-1\n",
+        "img_edge = int(math.sqrt(img_size))\n",
+        "\n",
+        "df.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "mp3I07FBuiDc"
+      },
+      "outputs": [],
       "source": [
         "label = df.iloc[:,0]\n",
         "# print(label)\n",
@@ -374,66 +276,88 @@
         "# plt.imshow(grid_data, interpolation = None, cmap = 'gray')\n",
         "# plt.show()\n",
         "# print(label[ind])"
-      ],
-      "metadata": {
-        "id": "mp3I07FBuiDc"
-      },
-      "execution_count": 80,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "ENU6kXtRcQmB"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
         "scaler = StandardScaler()\n",
         "std_df = scaler.fit_transform(df)\n",
         "# print(std_df.shape)"
-      ],
-      "metadata": {
-        "id": "ENU6kXtRcQmB"
-      },
-      "execution_count": 81,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "Sv-UdWsg0yfa"
+      },
+      "outputs": [],
       "source": [
         "N_DIM = 5\n",
         "pca = PCA(n_components=N_DIM)\n",
         "data_pca = pca.fit_transform(std_df)\n",
         "# print(data_pca.shape)\n",
         "# print(data_pca)"
-      ],
-      "metadata": {
-        "id": "Sv-UdWsg0yfa"
-      },
-      "execution_count": 82,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "s2HnUHi_5fnD"
+      },
+      "outputs": [],
       "source": [
         "result_df = pd.DataFrame(data_pca)\n",
         "result_df.insert(0, 'label', label)\n",
         "result_df.to_csv(\"dataset_pca.csv\", index = False)\n",
         "# print(result_df)"
-      ],
-      "metadata": {
-        "id": "s2HnUHi_5fnD"
-      },
-      "execution_count": 83,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "43rAtgipvPtm"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Dataset_PCA.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "b62b6089cd174fcd23de5a2ba1f03f98164a35935839c99f5cfe650d529eeaec"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.12 ('qiskit')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
