--- a/train.ipynb
+++ b/train.ipynb
@@ -30,7 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 10"
+    "EPOCHS = 10\n",
+    "SEED = 16\n",
+    "TRAINSIZE = 1000\n",
+    "VALSIZE = 1000\n",
+    "TESTSIZE = 115"
    ]
   },
   {
@@ -96,25 +100,15 @@
    ],
    "source": [
     "\n",
-    "# TODO: use postprocessed data instead\n",
-    "# ====================================\n",
-    "#transform = transforms.Compose(\n",
-    "#    [transforms.ToTensor(),\n",
-    "#    transforms.Normalize((0.5,), (0.5,))])\n",
-    "\n",
-    "# Create datasets for training & test, download if necessary\n",
-    "#training_set = torchvision.datasets.MNIST('./data', train=True, transform=transform, download=True)\n",
-    "#training_set, validation_set = random_split(training_set, [50000, 10000])\n",
-    "#test_set = torchvision.datasets.MNIST('./data', train=False, transform=transform, download=True)\n",
     "training_set = MyDataset('dataset_pca.csv') \n",
-    "training_set.filter([0, 1])#torchvision.datasets.MNIST('./data', train=True, transform=transform, download=True)\n",
-    "training_set, validation_set = random_split(training_set, [1000, len(training_set)-1000])\n",
-    "validation_set, test_set = random_split(validation_set, [1000, len(validation_set)-1000])\n",
+    "training_set.filter([0, 1])\n",
+    "training_set, validation_set = random_split(training_set, [TRAINSIZE, len(training_set)-TRAINSIZE], generator=torch.Generator().manual_seed(SEED))\n",
+    "validation_set, test_set, _ = random_split(validation_set, [VALSIZE, TESTSIZE, len(validation_set)-VALSIZE-TRAINSIZE], generator=torch.Generator().manual_seed(SEED))\n",
     "\n",
     "# Create data loaders for our datasets; shuffle for training, not for test\n",
-    "training_loader = DataLoader(training_set, batch_size=25, shuffle=True)\n",
-    "validation_loader = DataLoader(validation_set, batch_size=25, shuffle=False)\n",
-    "test_loader = DataLoader(test_set, batch_size=25, shuffle=False)\n",
+    "training_loader = DataLoader(training_set, batch_size=25, shuffle=True, generator=torch.Generator().manual_seed(SEED))\n",
+    "validation_loader = DataLoader(validation_set, batch_size=25, shuffle=False, generator=torch.Generator().manual_seed(SEED))\n",
+    "test_loader = DataLoader(test_set, batch_size=25, shuffle=False, generator=torch.Generator().manual_seed(SEED))\n",
     "\n",
     "# ====================================\n",
     "\n",
