--- a/train.ipynb
+++ b/train.ipynb
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 10"
+    "EPOCHS = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,27 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00d560b280464ef7883494ec221222a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00778e18a9f5432d87592e46b6f037ba",
+       "model_id": "16ccac41ac6d4d40974356a489c3caa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e994664bbdd4c28b48e6f36e8c2aec6",
+       "model_id": "e72efc96f2d44340a77387c96f115001",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,118 +168,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6663a309cd5f48a796cc605930a5a30e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "3:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b00ac2bf466941c78d7e67f1ff8ee761",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "4:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "810037838b684c6b9890e0f9b1e1a3e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "5:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55fdbad405bf4c8eaa48e0f67c70fe2f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "6:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f8c833b0e2c4d82b75e66817610b0cd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "7:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c29c0c1d0774cfc8e740107edc4efcb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "8:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a42f3174af4e4248afbfa162a1f42f57",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "9:   0%|          | 0/40 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "from tqdm.notebook import tqdm\n",
+    "import logging\n",
+    "import datetime\n",
+    "from pathlib import Path\n",
     "\n",
+    "loggername = f'{str(datetime.datetime.now())}'\n",
+    "filepath = Path(f'./experiment_results/{loggername}')\n",
+    "filepath.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "def estimated_label(params, data):\n",
     "    return circuit(params, data) # TODO: customize your extimated label\n",
     "\n",
     "writer = SummaryWriter(log_dir='./runs')\n",
     "\n",
+    "loss_list = []\n",
+    "avg_loss_list = []\n",
+    "avg_vloss_list = []\n",
+    "history_of_parameters = []\n",
     "for epoch in range(EPOCHS):\n",
     "    avg_loss = 0.0\n",
-    "    for i, data in tqdm(enumerate(training_loader), total=len(training_loader), desc=f\"{epoch}\"):\n",
+    "    for i, data in tqdm(enumerate(training_loader), total=len(training_loader), desc=f\"{epoch+1}\"):\n",
     "        inputs, labels = data\n",
     "        optimizer.zero_grad()\n",
     "        loss = torch.tensor(0, dtype=torch.float64)\n",
@@ -303,9 +201,15 @@
     "        loss.backward()       \n",
     "        optimizer.step()\n",
     "        avg_loss += loss.item()\n",
-    "        writer.add_scalar('local training loss', loss, epoch*len(training_loader)+i)\n",
-    "        \n",
+    "        loss_list.append(loss.item())\n",
+    "        writer.add_scalar('local training loss', loss.item(), epoch*len(training_loader)+i)\n",
+    "        np.save(filepath/f'epoch{epoch}_iter{epoch*len(training_loader)+i}', params.detach().numpy())\n",
+    "        # logger.debug(\"epoch: {} batch_index: {} --- loss: {} \\t params: {}\".format(epoch+1, i+1, loss.item(), params.detach().numpy()))\n",
+    "\n",
+    "\n",
     "    avg_loss = avg_loss/len(training_loader)\n",
+    "    avg_loss_list.append(avg_loss)\n",
+    "    \n",
     "    \n",
     "    with torch.no_grad():\n",
     "        avg_vloss = 0.0\n",
@@ -315,8 +219,11 @@
     "            for vinput, vlabel in zip(vinputs, vlabels):\n",
     "                voutput = estimated_label(params, vinput.to(torch.float64))\n",
     "                vloss += loss_fn(voutput, 2*vlabel.to(torch.float64)-1)/len(vlabels)\n",
-    "            avg_vloss += vloss\n",
+    "            avg_vloss += vloss.item()\n",
     "        avg_vloss = avg_vloss/len(test_loader)\n",
+    "        avg_vloss_list.append(avg_vloss)\n",
+    "        history_of_parameters.append(params.numpy())\n",
+    "        np.save(filepath/f'vaidataion_epoch{epoch}', params.numpy())\n",
     "    # print('LOSS train {} valid {}'.format(avg_loss, avg_vloss))\n",
     "\n",
     "    # Log the running loss averaged per batch\n",
@@ -328,49 +235,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9043478260869565\n"
+      "0.9130434782608695\n"
      ]
     }
    ],
    "source": [
-    "est_labels = []\n",
-    "true_labels = []\n",
-    "for i, data in enumerate(test_loader):\n",
-    "    test_datas, labels = data\n",
-    "    for label, test_data in zip(labels, test_datas):\n",
-    "        est_labels.append(estimated_label(params, test_data)>0)\n",
-    "        true_labels.append(label)\n",
+    "with torch.no_grad():\n",
+    "    est_labels = []\n",
+    "    true_labels = []\n",
+    "    for i, data in enumerate(test_loader):\n",
+    "        test_datas, labels = data\n",
+    "        for label, test_data in zip(labels, test_datas):\n",
+    "            est_labels.append(estimated_label(params, test_data).numpy()>0)\n",
+    "            true_labels.append(label.numpy())\n",
     "\n",
-    "accuracy = sum(np.array(est_labels)==np.array(true_labels))/len(est_labels)\n",
-    "print(accuracy)"
+    "    accuracy = sum(np.array(est_labels)==np.array(true_labels))/len(est_labels)\n",
+    "    accuracy = accuracy.item()\n",
+    "    print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9826086956521739"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "0.9826086956521739"
+    "import json\n",
+    "\n",
+    "with open(filepath/'summary.json', 'w') as fp:\n",
+    "    json.dump(dict(\n",
+    "        accuracy=accuracy,\n",
+    "        loss=loss_list,\n",
+    "        avg_loss = avg_loss_list,\n",
+    "        avg_vloss = avg_vloss_list,\n",
+    "    ), fp=fp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
